taskboard: fix style sheet to allow selecting of projects.  The user multiselection location is still too low.

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -43,9 +43,8 @@ a:hover{
   position:relative;
 }
 #toolbar .userselect{
-  bottom: 10px;
+  bottom:50px;
   font-size: 0.7em;
-  position: relative;
 }
 #toolbar .links{
   bottom:5px;
